tests/NormalTests/paczka1/small_fuzzy/68454385.err
Error in line 1: Jg6NXe2f S132 99,2
Error in line 3: Jg6NXe2f S150 41,7
